Issue #1: Finalized last part of experiments.